--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,41 @@
 # Project exclude paths
 /cmake-build-debug/
 .vscode
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+demo
+test
+cmake-build-debug
+CMakeLists.txt
+.idea/
